<resources>
    <string name="app_name">ExCon1</string>
    <string name="LABEL_FIRST_NAME">First Name</string>
    <string name="BTN_ADD_USER">Add User</string>
    <string name="BTN_BACK">Back</string>
    <string name="BTN_BROWSE">Browse</string>
    <string name="BTN_GET_ASYNC">Get(Async)</string>
    <string name="BTN_GET_NOSYNC">Get(NoSync)</string>
    <string name="BTN_SAX">SAX</string>
    <string name="BTN_DOM">DOM</string>
    <string name="LABEL_NAME">Name</string>
    <string name="BTN_IMAGE">Image</string>
    <string name="IMG_BLUE">blue</string>
    <string name="BTN_BLUE">Blue</string>
    <string name="BTN_RED">Red</string>
    <string name="BTN_TEAM_LIST">TeamList</string>
    <string name="BTN_XML">XML</string>
    <string name="title_activity_http_get">HttpGetActivity</string>
    <string name="BTN_HTTP">Http</string>
    <string name="title_activity_json">JsonActivity</string>
    <string name="BTN_JSON">Json</string>
    <string name="BTN_TIMEZONE">TimeZone</string>
    <string name="BTN_CLOCK">Clock</string>
    <string name="BTN">Add</string>
    <string name="BTN_ADD">Add</string>
    <string name="BTN_TIMEZONE_RV">TimeZone(RV)</string>
    <string name="BTN_FILE">File</string>
    <string name="last_modified">%1$tm月%1$td日 %1$tH時%1$tM分</string>
    <string name="top_page">TOP PAGE</string>
</resources>
